:bug: Fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,7 @@ transition-duration: 0.6s;
 margin-right:2%;
 margin-bottom:30px;
 background-color: #fff;
+overflow: hidden;
 }
 
 .accommodation-card:hover, .most-popular-card:hover, .activity-container-vertical:hover{
@@ -445,6 +446,7 @@ transition-duration: 0.6s;
 width:100%;
 height: 126px;
 background-color: #fff;
+overflow: hidden;
 }
 
 .most-popular-card a {
